password bundle request implemented, files translated to French, next is the the administration pannel, the post creation and the commenting system.

--- a/assets/styles/app.scss
+++ b/assets/styles/app.scss
@@ -2,6 +2,7 @@
 @import './elements/_menus.scss';
 @import './elements/_main.scss';
 @import './elements/_ul.scss';
+@import './elements/_button.scss';
 @import './elements/_a.scss';
 @import './elements/_input.scss';
 @import './parts/_nav.scss';
