--- a/assets/styles/elements/_input.scss
+++ b/assets/styles/elements/_input.scss
@@ -3,6 +3,12 @@ input {
   padding: 0;
   border-bottom: 1px solid black;
   transition: .3s ease;
+  @media (min-width: 320px) and (max-width: 991px) {
+    min-width: 200px;
+  }
+  @media (min-width: 991px) {
+    min-width: 250px;
+  }
 
   &:active {
     border: 0 !important;
