--- a/templates/email/register.html.twig
+++ b/templates/email/register.html.twig
@@ -9,7 +9,7 @@
         <p>Nous vous remercions pour votre inscription à notre site. Veuillez trouver ci-après un lien pour confirmer votre adresse email et profiter pleinement de l'application !</p>
     </div>
     <div class="content-container">
-        <p><a href="#">{{ token }}</a></p>
+        <p><a href="{{ absolute_url(path('app_verify_user', {token: token})) }}">Verification</a></p>
     </div>
 </main>
 
