--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -18,10 +18,10 @@
             </div>
         {% endif %}
 
-        <h1 class="h3 mb-3 font-weight-normal">Please sign in</h1>
+        <h1 class="h3 mb-3 font-weight-normal">Connexion</h1>
         <label for="username">Email</label>
         <input type="email" value="{{ last_username }}" name="_username" id="username" class="form-control" autocomplete="email" required autofocus>
-        <label for="password">Password</label>
+        <label for="password">Mot de passe</label>
         <input type="password" name="_password" id="password" class="form-control" autocomplete="current-password" required>
 
         <input type="hidden" name="_csrf_token"
@@ -38,9 +38,17 @@
                 </label>
             </div>
         #}
+        <div class="data-container">
+            <div class="button-container">
+                <button class="btn" type="submit">
+                    Connexion
+                </button>
+            </div>
+            <ul>
+                <li><a href="{{ path('app_register') }}">Inscription</a></li>
+                <li><a href="{{ path('app_forgot_password_request') }}">Mot de passe oublié ?</a></li>
+            </ul>
+        </div>
 
-        <button class="btn btn-lg btn-primary" type="submit">
-            Sign in
-        </button>
     </form>
 {% endblock %}
