Relations remade for Utilisateur, Commentaire, Reponse. Query made to limit the publications to 10 occurences. Relation made to Detail if the admin wants to write some details about a post. Some styling made for the forms, the mobile menu and some margins in order to have a visual-appealing render

--- a/assets/styles/elements/_a.scss
+++ b/assets/styles/elements/_a.scss
@@ -3,3 +3,18 @@ a {
   color: black;
   cursor: pointer;
 }
+
+.anchor-nav {
+  @media (min-width: 320px) and (max-width: 991px) {
+    font-size: 30px;
+    letter-spacing: 2px;
+  }
+  @media (min-width: 991px) and (max-width: 1499px) {
+    font-size: 30px;
+    letter-spacing: 2px;
+  }
+  @media (min-width: 1499px) and (max-width: 3080px) {
+    font-size: 40px;
+    letter-spacing: 3px;
+  }
+}
