--- a/templates/account/index.html.twig
+++ b/templates/account/index.html.twig
@@ -56,6 +56,9 @@
     </div>
     <div class="data-container">
         <div class="content-container">
+            <p>Pacte :</p>
+        </div>
+        <div class="content-container">
             {% if user.isAgreed %}
                 <p>Pacte accepté</p>
             {% else %}
