--- a/assets/styles/app.scss
+++ b/assets/styles/app.scss
@@ -1,10 +1,21 @@
+@font-face {
+  font-family: 'DragonSlayer';
+  src: url('../fonts/DragonSlayer.ttf') format('truetype');
+  font-weight: normal;
+  font-style: normal;
+  font-display: swap;
+}
 @import './elements/_body.scss';
 @import './elements/_menus.scss';
 @import './elements/_main.scss';
 @import './elements/_ul.scss';
+@import './elements/_label.scss';
 @import './elements/_button.scss';
 @import './elements/_a.scss';
 @import './elements/_input.scss';
 @import './parts/_nav.scss';
-@import './parts/_forms.scss';
+@import './parts/_login-form.scss';
+@import './parts/_registration-form.scss';
+@import './parts/_list-container.scss';
 @import './parts/_data-container.scss';
+@import './parts/_publication.scss';
