--- a/assets/styles/elements/_input.scss
+++ b/assets/styles/elements/_input.scss
@@ -5,9 +5,15 @@ input {
   transition: .3s ease;
   @media (min-width: 320px) and (max-width: 991px) {
     min-width: 200px;
+    font-size: 24px;
   }
-  @media (min-width: 991px) {
+  @media (min-width: 991px) and (max-width: 1499px) {
     min-width: 250px;
+    font-size: 34px;
+  }
+  @media (min-width: 1499px) and (max-width: 3080px) {
+    min-width: 250px;
+    font-size: 44px;
   }
 
   &:active {
