--- a/assets/styles/elements/_menus.scss
+++ b/assets/styles/elements/_menus.scss
@@ -1,10 +1,5 @@
 .mobile-menu {
-  @media (min-width: 320px) and (max-width: 991px) {
     display: none;
-  }
-  @media (min-width: 991px) {
-    display: none;
-  }
 }
 
 .mobile-menu-active {
@@ -15,8 +10,13 @@
     align-items: center;
     width: 100%;
     height: 350px;
-    background-color: red;
-    margin: 0 auto;
+    box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
+    backdrop-filter: blur(10px);
+    -webkit-backdrop-filter: blur(10px);
+    border: 1px solid rgba(255, 255, 255, 0.3);
+    background: rgba(255, 255, 255, 0.2);
+    margin: 10px auto;
+    border-radius: 7px;
   }
   @media (min-width: 991px) {
     display: none;
