--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -6,11 +6,14 @@
         <link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 128 128%22><text y=%221.2em%22 font-size=%2296%22>⚫️</text><text y=%221.3em%22 x=%220.2em%22 font-size=%2276%22 fill=%22%23fff%22>sf</text></svg>">
         <link rel="stylesheet" href="{{ asset('styles/app.scss') }}">
         {% block stylesheets %}
-
+            {{ encore_entry_link_tags('app') }}
         {% endblock %}
 
         {% block javascripts %}
-            {{ importmap('app') }}
+            {% block importmap %}
+{#                {{ importmap('app') }}#}
+            {% endblock %}
+            {{ encore_entry_script_tags('app') }}
         {% endblock %}
     </head>
     <body>
@@ -33,15 +36,19 @@
                 </div>
                 <div class="desktop-menu">
                     <ul>
-                        <li><a href="{{ path('app_main') }}">Home</a></li>
-                        <li><a href="#">Loi</a></li>
-                        <li><a href="#">Pacte</a></li>
+                        <li><a class="anchor-nav" href="{{ path('app_main') }}">Home</a></li>
+                        <li><a class="anchor-nav" href="#">Loi</a></li>
+                        <li><a class="anchor-nav" href="#">Pacte</a></li>
+                        <li><a class="anchor-nav" href="{{ path('app_publication') }}">Publications</a></li>
                         {% if app.user %}
-                        <li><a href="{{ path('app_account') }}">Compte</a></li>
-                        <li><a href="{{ path('app_logout') }}">Deconnexion</a></li>
+                        <li><a class="anchor-nav" href="{{ path('app_account') }}">Compte</a></li>
+                        <li><a class="anchor-nav" href="{{ path('app_logout') }}">Deconnexion</a></li>
                         {% else %}
-                        <li><a href="{{ path('app_login') }}">Connexion</a></li>
-                        <li><a href="{{ path('app_register') }}">Enregistrement</a></li>
+                        <li><a class="anchor-nav" href="{{ path('app_login') }}">Connexion</a></li>
+                        <li><a class="anchor-nav" href="{{ path('app_register') }}">Enregistrement</a></li>
+                        {% endif %}
+                        {% if is_granted('ROLE_ADMIN') %}
+                            <li><a class="anchor-nav" href="{{ path('app_admin') }}">Administration</a></li>
                         {% endif %}
                     </ul>
                 </div>
@@ -49,14 +56,18 @@
         </header>
         <div class="mobile-menu">
             <ul>
-                <li><a href="{{ path('app_main') }}">Home</a></li>
-                <li><a href="#">Loi</a></li>
-                <li><a href="#">Pacte</a></li>
+                <li><a class="anchor-nav" href="{{ path('app_main') }}">Home</a></li>
+                <li><a class="anchor-nav" href="#">Loi</a></li>
+                <li><a class="anchor-nav" href="#">Pacte</a></li>
+                <li><a class="anchor-nav" href="{{ path('app_publication') }}">Publications</a></li>
                 {% if app.user %}
-                <li><a href="{{ path('app_account') }}">Compte</a></li>
+                <li><a class="anchor-nav" href="{{ path('app_account') }}">Compte</a></li>
                 {% else %}
-                <li><a href="{{ path('app_login') }}">Connexion</a></li>
-                <li><a href="{{ path('app_register') }}">Enregistrement</a></li>
+                <li><a class="anchor-nav" href="{{ path('app_login') }}">Connexion</a></li>
+                <li><a class="anchor-nav" href="{{ path('app_register') }}">Enregistrement</a></li>
+                {% endif %}
+                {% if is_granted('ROLE_ADMIN') %}
+                    <li><a class="anchor-nav" href="{{ path('app_admin') }}">Administration</a></li>
                 {% endif %}
             </ul>
         </div>
