--- a/templates/registration/register.html.twig
+++ b/templates/registration/register.html.twig
@@ -7,18 +7,34 @@
 {% endblock %}
 
 {% block body %}
-    <h1>Enregistrement</h1>
 
     {{ form_errors(registrationForm) }}
 
-    {{ form_start(registrationForm) }}
-        {{ form_row(registrationForm.nom) }}
-        {{ form_row(registrationForm.prenom) }}
-        {{ form_row(registrationForm.email) }}
-        {{ form_row(registrationForm.telephone) }}
-        {{ form_row(registrationForm.plainPassword) }}
-        {{ form_row(registrationForm.agreeTerms) }}
+    {{ form_start(registrationForm, {'attr': {'id': 'registration-form'}}) }}
 
-        <button type="submit" class="btn">Enregistrement</button>
+    <!-- Render each form field with a custom class -->
+    <div class="form-group">
+        {{ form_row(registrationForm.nom, {'attr': {'class': 'form-control'}}) }}
+    </div>
+    <div class="form-group">
+        {{ form_row(registrationForm.prenom, {'attr': {'class': 'form-control'}}) }}
+    </div>
+    <div class="form-group">
+        {{ form_row(registrationForm.email, {'attr': {'class': 'form-control'}}) }}
+    </div>
+    <div class="form-group">
+        {{ form_row(registrationForm.telephone, {'attr': {'class': 'form-control'}}) }}
+    </div>
+    <div class="form-group">
+        {{ form_row(registrationForm.plainPassword, {'attr': {'class': 'form-control'}}) }}
+    </div>
+    <div class="form-group form-check">
+        {{ form_row(registrationForm.agreeTerms, {'attr': {'class': 'form-check-input'}}) }}
+    </div>
+
+    <!-- Submit button -->
+    <button type="submit" class="btn btn-primary" id="register">Enregistrement</button>
+
+    <!-- End the form -->
     {{ form_end(registrationForm) }}
 {% endblock %}
