--- a/assets/styles/elements/_body.scss
+++ b/assets/styles/elements/_body.scss
@@ -1,6 +1,5 @@
-
 body {
-  background-color: white !important;
+  background-color: black !important;
   transition: .3s ease;
   font-family: 'DragonSlayer', sans-serif;
 }
