--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -5,13 +5,16 @@
         <title>{% block title %}Welcome!{% endblock %}</title>
         <link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 128 128%22><text y=%221.2em%22 font-size=%2296%22>⚫️</text><text y=%221.3em%22 x=%220.2em%22 font-size=%2276%22 fill=%22%23fff%22>sf</text></svg>">
         <link rel="stylesheet" href="{{ asset('styles/app.scss') }}">
+        <link rel="stylesheet"
+              href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css"
+        />
         {% block stylesheets %}
             {{ encore_entry_link_tags('app') }}
         {% endblock %}
 
         {% block javascripts %}
             {% block importmap %}
-{#                {{ importmap('app') }}#}
+                {{ importmap(['app', 'hamburger']) }}
             {% endblock %}
             {{ encore_entry_script_tags('app') }}
         {% endblock %}
@@ -37,11 +40,12 @@
                 <div class="desktop-menu">
                     <ul>
                         <li><a class="anchor-nav" href="{{ path('app_main') }}">Home</a></li>
-                        <li><a class="anchor-nav" href="#">Loi</a></li>
+                        <li><a class="anchor-nav" href="{{ path('app_loi') }}">Loi</a></li>
                         <li><a class="anchor-nav" href="#">Pacte</a></li>
                         <li><a class="anchor-nav" href="{{ path('app_publication') }}">Publications</a></li>
                         {% if app.user %}
                         <li><a class="anchor-nav" href="{{ path('app_account') }}">Compte</a></li>
+                            <li><a class="anchor-nav" href="{{ path('app_sondages') }}">Sondages</a></li>
                         <li><a class="anchor-nav" href="{{ path('app_logout') }}">Deconnexion</a></li>
                         {% else %}
                         <li><a class="anchor-nav" href="{{ path('app_login') }}">Connexion</a></li>
@@ -57,11 +61,12 @@
         <div class="mobile-menu">
             <ul>
                 <li><a class="anchor-nav" href="{{ path('app_main') }}">Home</a></li>
-                <li><a class="anchor-nav" href="#">Loi</a></li>
+                <li><a class="anchor-nav" href="{{ path('app_loi') }}">Loi</a></li>
                 <li><a class="anchor-nav" href="#">Pacte</a></li>
                 <li><a class="anchor-nav" href="{{ path('app_publication') }}">Publications</a></li>
                 {% if app.user %}
                 <li><a class="anchor-nav" href="{{ path('app_account') }}">Compte</a></li>
+                <li><a class="anchor-nav" href="{{ path('app_sondages') }}">Sondages</a></li>
                 {% else %}
                 <li><a class="anchor-nav" href="{{ path('app_login') }}">Connexion</a></li>
                 <li><a class="anchor-nav" href="{{ path('app_register') }}">Enregistrement</a></li>
@@ -71,6 +76,7 @@
                 {% endif %}
             </ul>
         </div>
-        {% block body %}{% endblock %}
+        {% block body %}
+        {% endblock %}
     </body>
 </html>
