--- a/templates/email/register.html.twig
+++ b/templates/email/register.html.twig
@@ -1,15 +1,3 @@
 <main>
-    <div class="title-container">
-        <h1>Activation de votre compte sur Skull Darts 71</h1>
-    </div>
-    <div class="content-container">
-        <p>Bonjour {{ user.prenom }} !</p>
-    </div>
-    <div class="content-container">
-        <p>Nous vous remercions pour votre inscription à notre site. Veuillez trouver ci-après un lien pour confirmer votre adresse email et profiter pleinement de l'application !</p>
-    </div>
-    <div class="content-container">
-        <p><a href="{{ absolute_url(path('app_verify_user', {token: token})) }}">Verification</a></p>
-    </div>
+    {% include 'partials/email/register/_register.html.twig' %}
 </main>
-
