--- a/assets/styles/app.scss
+++ b/assets/styles/app.scss
@@ -6,16 +6,37 @@
   font-display: swap;
 }
 @import './elements/_body.scss';
+@import './parts/_main.scss';
+@import './elements/_scrollbar.scss';
 @import './elements/_menus.scss';
 @import './elements/_main.scss';
 @import './elements/_ul.scss';
+@import './elements/_span.scss';
 @import './elements/_label.scss';
+@import './elements/_form.scss';
 @import './elements/_button.scss';
 @import './elements/_a.scss';
+@import './elements/_li.scss';
+@import './elements/_keyframes.scss';
+@import './elements/_h.scss';
+@import './elements/_p.scss';
 @import './elements/_input.scss';
+@import './elements/_pseudo-elements.scss';
+@import './elements/swiper/_swiper.scss';
+@import './elements/swiper/_swiper-pagination.scss';
+@import './elements/swiper/_swiper-navigation.scss';
 @import './parts/_nav.scss';
 @import './parts/_login-form.scss';
+@import './parts/_login-form.scss';
 @import './parts/_registration-form.scss';
+@import './parts/_vote-form.scss';
+@import './parts/_results.scss';
+@import './parts/_loi.scss';
+@import './parts/_sondage.scss';
 @import './parts/_list-container.scss';
+@import './parts/_loi-content-container.scss';
 @import './parts/_data-container.scss';
 @import './parts/_publication.scss';
+@import './class/_x.scss';
+@import './class/_animated.scss';
+@import './class/_glass.scss';
