--- a/assets/styles/elements/_button.scss
+++ b/assets/styles/elements/_button.scss
@@ -4,6 +4,7 @@ button {
   border: none;
   cursor: pointer;
   font-family: "DragonSlayer", sans-serif;
+  color: white;
   @media (min-width: 320px) and (max-width: 991px) {
     font-size: 24px;
     letter-spacing: 4px;
