--- a/assets/styles/elements/_input.scss
+++ b/assets/styles/elements/_input.scss
@@ -1,8 +1,10 @@
 input {
   border: 0;
   padding: 0;
-  border-bottom: 1px solid black;
+  background: transparent;
+  border-bottom: 1px solid white;
   transition: .3s ease;
+  color: white;
   @media (min-width: 320px) and (max-width: 991px) {
     min-width: 200px;
     font-size: 24px;
@@ -17,20 +19,17 @@ input {
   }
 
   &:active {
-    border: 0 !important;
-    outline: 1px solid black !important;
     padding: 3px;
-    border-bottom: 1px solid red;
     transition: .3s ease;
     border-radius: 7px;
+    background-color: rgba(0, 0, 0, 0.41);
   }
 
   &:focus {
-    border: 0 !important;
-    outline: 1px solid black !important;
     padding: 3px;
-    border-bottom: 1px solid red;
     transition: .3s ease;
     border-radius: 7px;
+    background-color: rgba(0, 0, 0, 0.41);
+    box-shadow: 0 0 15px black;
   }
 }
