--- a/assets/styles/elements/_main.scss
+++ b/assets/styles/elements/_main.scss
@@ -3,4 +3,14 @@ main {
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  margin: 3% auto;
+  width: 100%;
+  //@media (min-width: 991px) and (max-width: 3080px) {
+  //  height: calc(100vh - 100px);
+  //
+  //}
+
+  //@media (min-width: 991px) and (max-width: 3080px) {
+  //  max-width: 1024px;
+  //}
 }
