--- a/assets/styles/elements/_menus.scss
+++ b/assets/styles/elements/_menus.scss
@@ -8,15 +8,17 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    width: 100%;
-    height: 350px;
+    width: 96%;
     box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
     backdrop-filter: blur(10px);
     -webkit-backdrop-filter: blur(10px);
     border: 1px solid rgba(255, 255, 255, 0.3);
     background: rgba(255, 255, 255, 0.2);
-    margin: 10px auto;
     border-radius: 7px;
+    position: absolute;
+    top: 10%;
+    margin: 0 auto;
+    z-index: 50;
   }
   @media (min-width: 991px) {
     display: none;
@@ -43,5 +45,18 @@
     justify-content: space-around;
     align-items: center;
     margin: 0 auto;
+
+    li {
+
+      a{
+        @media (min-width: 911px) and (max-width: 1499px) {
+          font-size: 24px;
+        }
+        @media (min-width: 1499px) and (max-width: 3080px) {
+          font-size: 34px;
+        }
+      }
+
+    }
   }
 }
