--- a/assets/styles/parts/_publication.scss
+++ b/assets/styles/parts/_publication.scss
@@ -1,17 +1,43 @@
 #publication-container {
-  margin: 0 auto;
   @media (min-width: 320px) and (max-width: 991px) {
     width: 90%;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    height: 100%;
   }
   @media (min-width: 991px) and (max-width: 1499px) {
     width: 75%;
   }
   @media (min-width: 1499px) and (max-width: 3080px) {
     width: 50%;
+  }
+
+  ul {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+
+    li {
+      margin: 10px auto;
+
+      a {
+        @media (min-width: 320px) and (max-width: 991px) {
+          font-size: 24px;
+          letter-spacing: 2px;
+        }
+        @media (min-width: 991px) and (max-width: 1499px) {
+          font-size: 32px;
+          letter-spacing: 4px;
+        }
+        @media (min-width: 1499px) and (max-width: 3080px) {
+          font-size: 42px;
+          letter-spacing: 6px;
+        }
+      }
+    }
   }
 
   .title-container {
