--- a/assets/styles/parts/_registration-form.scss
+++ b/assets/styles/parts/_registration-form.scss
@@ -27,22 +27,37 @@
       width: 70%;
     }
 
-  }
-  div {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    width: 100%;
-    margin: 0 auto;
-    label, input {
-      @media (min-width: 320px) and (max-width: 991px) {
-        font-size: 12px;
+    div {
+      display: flex;
+      justify-content: flex-start;
+      align-items: center;
+      width: 100%;
+      margin: 0 auto;
+      label, input {
+        @media (min-width: 320px) and (max-width: 991px) {
+          font-size: 12px;
+        }
+        @media (min-width: 991px) and (max-width: 1499px) {
+          font-size: 32px;
+        }
+        @media (min-width: 1499px) and (max-width: 3080px) {
+          font-size: 42px;
+        }
       }
-      @media (min-width: 991px) and (max-width: 1499px) {
-        font-size: 32px;
-      }
-      @media (min-width: 1499px) and (max-width: 3080px) {
-        font-size: 42px;
+    }
+    #entropy-container {
+      display: flex;
+      flex-direction: column;
+      p {
+        @media (min-width: 320px) and (max-width: 991px) {
+          font-size: 12px;
+        }
+        @media (min-width: 991px) and (max-width: 1499px) {
+          font-size: 32px;
+        }
+        @media (min-width: 1499px) and (max-width: 3080px) {
+          font-size: 42px;
+        }
       }
     }
   }
