--- a/templates/email/reset.html.twig
+++ b/templates/email/reset.html.twig
@@ -1,7 +1,1 @@
-<p>Bonjour {{ user.username }},</p>
-
-<p>Pour réinitialiser votre mot de passe, cliquez sur le lien suivant :
-    <a href="{{ resetPasswordUrl }}">Réinitialiser le mot de passe</a>
-</p>
-
-<p>Si vous n'avez pas demandé de réinitialisation de mot de passe, ignorez cet email.</p>
+{% include 'partials/email/reset_password/_reset-password.html.twig' %}
