--- a/templates/loi/index.html.twig
+++ b/templates/loi/index.html.twig
@@ -1,20 +1,10 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Hello LoiController!{% endblock %}
-
+{% block title %}Legislation{% endblock %}
+{% block importmap %}
+    {{ importmap('swiper') }}
+{% endblock %}
 {% block body %}
-<style>
-    .example-wrapper { margin: 1em auto; max-width: 800px; width: 95%; font: 18px/1.5 sans-serif; }
-    .example-wrapper code { background: #F5F5F5; padding: 2px 6px; }
-</style>
-
-<div class="example-wrapper">
-    <h1>Hello {{ controller_name }}! ✅</h1>
-
-    This friendly message is coming from:
-    <ul>
-        <li>Your controller at <code>D:/dev/symfony_projects/skulldarts/src/Controller/LoiController.php</code></li>
-        <li>Your template at <code>D:/dev/symfony_projects/skulldarts/templates/loi/index.html.twig</code></li>
-    </ul>
-</div>
+    {% include 'partials/swiper/swiper-loi.html.twig' %}
+    <script defer src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
 {% endblock %}
