--- a/templates/registration/register.html.twig
+++ b/templates/registration/register.html.twig
@@ -3,38 +3,44 @@
 {% block title %}Enregistrement{% endblock %}
 
 {% block javascripts %}
-    {{ parent() }}
+    {% block importmap %}
+        {{ importmap('register') }}
+    {% endblock %}
 {% endblock %}
 
 {% block body %}
 
     {{ form_errors(registrationForm) }}
+        {{ form_start(registrationForm, {'attr': {'id': 'registration-form'}}) }}
 
-    {{ form_start(registrationForm, {'attr': {'id': 'registration-form'}}) }}
+        <!-- Render each form field with a custom class -->
+        <div class="form-group">
+            {{ form_row(registrationForm.nom, {'attr': {'class': 'form-control'}}) }}
+        </div>
+        <div class="form-group">
+            {{ form_row(registrationForm.prenom, {'attr': {'class': 'form-control'}}) }}
+        </div>
+        <div class="form-group">
+            {{ form_row(registrationForm.email, {'attr': {'class': 'form-control'}}) }}
+        </div>
+        <div class="form-group">
+            {{ form_row(registrationForm.telephone, {'attr': {'class': 'form-control'}}) }}
+        </div>
+        <div class="form-group">
+            {{ form_row(registrationForm.plainPassword, {'attr': {'class': 'form-control'}}) }}
+            <div id="entropy-container">
+                <p>
+                    Complexité du mot de passe : <span id="entropy" class="text-red">FAIBLE</span>
+                </p>
+            </div>
+        </div>
+        <div class="form-group form-check">
+            {{ form_row(registrationForm.agreeTerms, {'attr': {'class': 'form-check-input'}}) }}
+        </div>
 
-    <!-- Render each form field with a custom class -->
-    <div class="form-group">
-        {{ form_row(registrationForm.nom, {'attr': {'class': 'form-control'}}) }}
-    </div>
-    <div class="form-group">
-        {{ form_row(registrationForm.prenom, {'attr': {'class': 'form-control'}}) }}
-    </div>
-    <div class="form-group">
-        {{ form_row(registrationForm.email, {'attr': {'class': 'form-control'}}) }}
-    </div>
-    <div class="form-group">
-        {{ form_row(registrationForm.telephone, {'attr': {'class': 'form-control'}}) }}
-    </div>
-    <div class="form-group">
-        {{ form_row(registrationForm.plainPassword, {'attr': {'class': 'form-control'}}) }}
-    </div>
-    <div class="form-group form-check">
-        {{ form_row(registrationForm.agreeTerms, {'attr': {'class': 'form-check-input'}}) }}
-    </div>
+        <!-- Submit button -->
+        <button type="submit" class="btn btn-primary" id="register" disabled>Enregistrement</button>
 
-    <!-- Submit button -->
-    <button type="submit" class="btn btn-primary" id="register">Enregistrement</button>
-
-    <!-- End the form -->
-    {{ form_end(registrationForm) }}
+        <!-- End the form -->
+        {{ form_end(registrationForm) }}
 {% endblock %}
