comments part done.

--- a/assets/styles/app.scss
+++ b/assets/styles/app.scss
@@ -17,6 +17,7 @@
 @import './elements/_button.scss';
 @import './elements/_a.scss';
 @import './elements/_li.scss';
+@import './elements/_div.scss';
 @import './elements/_keyframes.scss';
 @import './elements/_h.scss';
 @import './elements/_p.scss';
@@ -34,6 +35,8 @@
 @import './parts/_loi.scss';
 @import './parts/_sondage.scss';
 @import './parts/_list-container.scss';
+@import './parts/_comment.scss';
+@import './parts/_comment-form.scss';
 @import './parts/_loi-content-container.scss';
 @import './parts/_data-container.scss';
 @import './parts/_publication.scss';
