EventSubscriber done to automatically send an email whenever a new sondage is created

--- a/templates/partials/email/register/_register.html.twig
+++ b/templates/partials/email/register/_register.html.twig
@@ -8,5 +8,5 @@
     <p>Nous vous remercions pour votre inscription à notre site. Veuillez trouver ci-après un lien pour confirmer votre adresse email et profiter pleinement de l'application !</p>
 </div>
 <div class="content-container">
-    <p><a href="{{ absolute_url(path('app_verify_user', {token: token})) }}">Verification</a></p>
+    <p><a href="{{ absolute_url(path('app_sondages', {token: token})) }}">Verification</a></p>
 </div>
